--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -1,2 +1,57 @@
-<h1>Pages#schedule</h1>
-<p>Find me in app/views/pages/schedule.html.erb</p>
+<h1>Schedule</h1>
+
+<h2>Friday Night August 30th:</h2>
+
+<ul>
+
+<li>John Gorka at The Pump House-$18 advance $21 day of show</li>
+<li>Chastity Brown at The Root Note</li>
+<li>Eric Sommer at The Bodega</li>
+</ul>
+
+<h2>Saturday August 31st:</h2>
+
+<ul>
+<li>The Pearl Street block stage (free) line-up:</li>
+<li>2:00-3:00 PM Click Track</li>
+<li>3:30-4:30 PM Black River Revue</li>
+<li>5:00-6:00 PM Fayme Rochelle &amp; the Waxwings</li>
+<li>6:30-8:00 PM Natty Nation</li>
+<li>8:30-10:00 PM Roster McCabe</li>
+</ul>
+
+<h2>Saturday Night August 31st:</h2>
+<ul>
+
+<li>Gary Louris (Trio) at The Cavalier Theater-$25 advance and $30 day of show</li>
+<li>Roster McCabe at The Popcorn</li>
+<li>Fayme Rochelle and The Waxwings at The Bodega</li>
+<li>Black River Revue at The Root Note</li>
+</ul>
+
+<h2>Sunday September 1st:</h2>
+<p>The Pearl Street block stage (free) line-up:</p>
+
+<ul>
+<li>3:30-4:30 PM Mike Munson</li>
+<li>5:00-6:00 PM General B and the Wiz</li>
+<li>6:30-8:00 PM Bigtree Bonsai</li>
+<li>8:30-10:00 PM T.U.G.G.</li>
+</ul>
+
+<h2>Sunday Night September 1st:</h2>
+
+<ul>
+<li>Big Tree Bonsai- The Popcorn</li>
+<li>General B and The Wiz- The Root Note</li>
+<li>Mike Munson- The Bodega</li>
+</ul>
+
+
+
+
+
+
+
+
+
